--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ on:
 jobs:
   libcore:
     name: Native Build (LibCore)
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -43,7 +43,7 @@ jobs:
         run: ./run init action go && ./run lib core
   build:
     name: Build OSS APK
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     needs:
       - libcore
     steps:
